--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ url &lt;- &quot;https://data.baltimorecity.gov/api/views/dz54-2aru/rows.csv?acce
 download.file(url, destfile=&quot;data/cameras.csv&quot;, method=&quot;curl&quot;)
 dateDownloded &lt;- date()
 print(dateDownloded)</code></pre>
-<pre><code>## [1] &quot;Wed Feb 19 11:53:13 2020&quot;</code></pre>
+<pre><code>## [1] &quot;Wed Feb 19 13:33:15 2020&quot;</code></pre>
 <pre class="r"><code>camdata &lt;- read.table(&quot;data/cameras.csv&quot;, sep=&quot;,&quot;, header = T)
 print(head(camdata))</code></pre>
 <pre><code>##                                     address direction          street
@@ -413,7 +413,7 @@ url2 &lt;- &quot;https://data.baltimorecity.gov/api/views/dz54-2aru/rows.xlsx?ac
 download.file(url2, destfile=&quot;data/cameras.xlsx&quot;, method=&quot;curl&quot;)
 dateDownloded &lt;- date()
 print(dateDownloded)</code></pre>
-<pre><code>## [1] &quot;Wed Feb 19 11:53:14 2020&quot;</code></pre>
+<pre><code>## [1] &quot;Wed Feb 19 13:33:15 2020&quot;</code></pre>
 <pre class="r"><code># library(xlsx); read.xlsx(data, sheetIndex, header)
 
 # XML file
@@ -445,22 +445,22 @@ print(teams)</code></pre>
 library(data.table)
 df = data.table(x=rnorm(9), y = rep(c(&quot;a&quot;,&quot;b&quot;,&quot;c&quot;), each=3),z=rnorm(9))
 print(head(df,3))</code></pre>
-<pre><code>##             x y          z
-## 1: -0.6232540 a  0.8984944
-## 2:  2.9099649 a -0.3488921
-## 3:  0.5762769 a  0.1200319</code></pre>
+<pre><code>##            x y          z
+## 1: 0.1104614 a -0.1131677
+## 2: 0.2044631 a -0.8484919
+## 3: 0.3007489 a  1.1455939</code></pre>
 <pre class="r"><code>df[2,] # row = 2</code></pre>
-<pre><code>##           x y          z
-## 1: 2.909965 a -0.3488921</code></pre>
+<pre><code>##            x y          z
+## 1: 0.2044631 a -0.8484919</code></pre>
 <pre class="r"><code>df[df$y=='a']</code></pre>
-<pre><code>##             x y          z
-## 1: -0.6232540 a  0.8984944
-## 2:  2.9099649 a -0.3488921
-## 3:  0.5762769 a  0.1200319</code></pre>
+<pre><code>##            x y          z
+## 1: 0.1104614 a -0.1131677
+## 2: 0.2044631 a -0.8484919
+## 3: 0.3007489 a  1.1455939</code></pre>
 <pre class="r"><code>df[c(2,3)]  # row=2,3</code></pre>
 <pre><code>##            x y          z
-## 1: 2.9099649 a -0.3488921
-## 2: 0.5762769 a  0.1200319</code></pre>
+## 1: 0.2044631 a -0.8484919
+## 2: 0.3007489 a  1.1455939</code></pre>
 <pre class="r"><code>df[,w:=z^2]
 df[, table(y)]</code></pre>
 <pre><code>## y
@@ -468,7 +468,147 @@ df[, table(y)]</code></pre>
 ## 3 3 3</code></pre>
 <pre class="r"><code>df[, list(mean(x), sum(x))]</code></pre>
 <pre><code>##           V1       V2
-## 1: 0.1745135 1.570621</code></pre>
+## 1: 0.1251913 1.126721</code></pre>
+</div>
+<div id="week-2" class="section level3">
+<h3>Week 2</h3>
+<pre class="r"><code># mySQL
+library(RMySQL)</code></pre>
+<pre><code>## Loading required package: DBI</code></pre>
+<pre class="r"><code>ucscDb&lt;- dbConnect(MySQL(), user=&quot;genome&quot;, host=&quot;genome-mysql.soe.ucsc.edu&quot;)
+result &lt;- dbGetQuery(ucscDb, &quot;show databases&quot;)
+dbDisconnect(ucscDb)</code></pre>
+<pre><code>## [1] TRUE</code></pre>
+<pre class="r"><code>hg19&lt;- dbConnect(MySQL(), user=&quot;genome&quot;, db=&quot;hg19&quot;, host=&quot;genome-mysql.soe.ucsc.edu&quot;)
+result &lt;- dbListTables(hg19)
+length(result)</code></pre>
+<pre><code>## [1] 12441</code></pre>
+<pre class="r"><code>result[1:5]</code></pre>
+<pre><code>## [1] &quot;HInv&quot;         &quot;HInvGeneMrna&quot; &quot;acembly&quot;      &quot;acemblyClass&quot; &quot;acemblyPep&quot;</code></pre>
+<pre class="r"><code>dbListFields(hg19, &quot;affyU133Plus2&quot;) # for a specific table</code></pre>
+<pre><code>##  [1] &quot;bin&quot;         &quot;matches&quot;     &quot;misMatches&quot;  &quot;repMatches&quot;  &quot;nCount&quot;     
+##  [6] &quot;qNumInsert&quot;  &quot;qBaseInsert&quot; &quot;tNumInsert&quot;  &quot;tBaseInsert&quot; &quot;strand&quot;     
+## [11] &quot;qName&quot;       &quot;qSize&quot;       &quot;qStart&quot;      &quot;qEnd&quot;        &quot;tName&quot;      
+## [16] &quot;tSize&quot;       &quot;tStart&quot;      &quot;tEnd&quot;        &quot;blockCount&quot;  &quot;blockSizes&quot; 
+## [21] &quot;qStarts&quot;     &quot;tStarts&quot;</code></pre>
+<pre class="r"><code>dbGetQuery(hg19, &quot;select count(*) from affyU133Plus2&quot;)</code></pre>
+<pre><code>##   count(*)
+## 1    58463</code></pre>
+<pre class="r"><code>affyData &lt;- dbReadTable(hg19, &quot;affyU133Plus2&quot;)</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 0 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 1 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 2 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 3 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 4 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 5 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 6 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 7 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 8 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 11 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 12 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 13 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 15 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 16 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 17 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 18 imported as
+## numeric</code></pre>
+<pre class="r"><code>head(affyData)</code></pre>
+<pre><code>##   bin matches misMatches repMatches nCount qNumInsert qBaseInsert tNumInsert
+## 1 585     530          4          0     23          3          41          3
+## 2 585    3355         17          0    109          9          67          9
+## 3 585    4156         14          0     83         16          18          2
+## 4 585    4667          9          0     68         21          42          3
+## 5 585    5180         14          0    167         10          38          1
+## 6 585     468          5          0     14          0           0          0
+##   tBaseInsert strand        qName qSize qStart qEnd tName     tSize tStart
+## 1         898      -  225995_x_at   637      5  603  chr1 249250621  14361
+## 2       11621      -  225035_x_at  3635      0 3548  chr1 249250621  14381
+## 3          93      -  226340_x_at  4318      3 4274  chr1 249250621  14399
+## 4        5743      - 1557034_s_at  4834     48 4834  chr1 249250621  14406
+## 5          29      -    231811_at  5399      0 5399  chr1 249250621  19688
+## 6           0      -    236841_at   487      0  487  chr1 249250621  27542
+##    tEnd blockCount
+## 1 15816          5
+## 2 29483         17
+## 3 18745         18
+## 4 24893         23
+## 5 25078         11
+## 6 28029          1
+##                                                                   blockSizes
+## 1                                                          93,144,229,70,21,
+## 2              73,375,71,165,303,360,198,661,201,1,260,250,74,73,98,155,163,
+## 3                 690,10,32,33,376,4,5,15,5,11,7,41,277,859,141,51,443,1253,
+## 4 99,352,286,24,49,14,6,5,8,149,14,44,98,12,10,355,837,59,8,1500,133,624,58,
+## 5                                       131,26,1300,6,4,11,4,7,358,3359,155,
+## 6                                                                       487,
+##                                                                                                  qStarts
+## 1                                                                                    34,132,278,541,611,
+## 2                        87,165,540,647,818,1123,1484,1682,2343,2545,2546,2808,3058,3133,3206,3317,3472,
+## 3                   44,735,746,779,813,1190,1195,1201,1217,1223,1235,1243,1285,1564,2423,2565,2617,3062,
+## 4 0,99,452,739,764,814,829,836,842,851,1001,1016,1061,1160,1173,1184,1540,2381,2441,2450,3951,4103,4728,
+## 5                                                     0,132,159,1460,1467,1472,1484,1489,1497,1856,5244,
+## 6                                                                                                     0,
+##                                                                                                                                      tStarts
+## 1                                                                                                             14361,14454,14599,14968,15795,
+## 2                                     14381,14454,14969,15075,15240,15543,15903,16104,16853,17054,17232,17492,17914,17988,18267,24736,29320,
+## 3                               14399,15089,15099,15131,15164,15540,15544,15549,15564,15569,15580,15587,15628,15906,16857,16998,17049,17492,
+## 4 14406,20227,20579,20865,20889,20938,20952,20958,20963,20971,21120,21134,21178,21276,21288,21298,21653,22492,22551,22559,24059,24211,24835,
+## 5                                                                         19688,19819,19845,21145,21151,21155,21166,21170,21177,21535,24923,
+## 6                                                                                                                                     27542,</code></pre>
+<pre class="r"><code>query &lt;- dbSendQuery(hg19, &quot;select * from affyU133Plus2 where misMatches between 1 and 3&quot;)</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 0 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 1 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 2 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 3 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 4 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 5 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 6 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 7 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 8 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 11 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 12 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 13 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 15 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 16 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 17 imported as
+## numeric</code></pre>
+<pre><code>## Warning in .local(conn, statement, ...): Unsigned INTEGER in col 18 imported as
+## numeric</code></pre>
+<pre class="r"><code>affyMis &lt;- fetch(query, n=10); quantile(affyMis$misMatches)</code></pre>
+<pre><code>##   0%  25%  50%  75% 100% 
+##  1.0  1.0  1.5  3.0  3.0</code></pre>
+<pre class="r"><code>dbDisconnect(hg19)</code></pre>
+<pre><code>## Warning: Closing open result sets</code></pre>
+<pre><code>## [1] TRUE</code></pre>
 </div>
 
 
